tests/ui/return/return-type.stderr
error[E0308]: mismatched types
  --> $DIR/return-type.rs:10:5
   |
LL |     foo(4 as usize)
   |     ^^^^^^^^^^^^^^^ expected `()`, found `S<usize>`
   |
   = note: expected unit type `()`
                 found struct `S<usize>`
note: the function foo is defined here
  --> $DIR/return-type.rs:5:1
   |
LL | fn foo<T>(x: T) -> S<T> {
   | ^^^^^^^^^^^^^^^^^^^^^^^
help: consider using a semicolon here
   |
LL |     foo(4 as usize);
   |                    +
help: try adding a return type
   |
LL | fn bar() -> S<usize> {
   |          +++++++++++
help: consider changing foo's return type
   |
LL | fn foo<T>(x: T) -> () {
   |                    ~~

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
